# jobctl

./: .env.sh  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  hooks.zsh
resources/: hooks.sh  hooks.zsh
src/: cli.rs  lib.rs  main.rs  sessions.rs  utils.rs
