[package]
name = "jobctl"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.38", features = ["derive"] }
directories = "5"
libc = "0.2.172"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.35.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
